# OOD-1

./: CMakeLists.txt  README.md
part1/FuncSimUDuck/: SimUDuck.cpp
part1/FuncSimUDuck/lib/: Duck.h  DuckFunctions.h
part1/FuncSimUDuck/lib/Duck/: DecoyDuck.h  FunctionalDuck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
part1/SimUDuck/: SimUDuck.cpp
part1/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  FunctionalDuck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
part1/SimUDuck/lib/Duck/Dance/: IDanceBehavior.h  MinuetBehavior.h  WaltzBehavior.h
part1/SimUDuck/lib/Duck/Fly/: FlyWithWings.h
part2/: Canvas.h  Picture.cpp  Picture.h  Shape.cpp  Shape.h  main.cpp
part2/Canvas/: PNGCanvas.cpp  PNGCanvas.h
part2/Commands/: ShapesCommandProcessor.cpp  ShapesCommandProcessor.h
part2/Picture/: Picture.cpp  Picture.h
part2/Shapes/: Circle.h  CircleDrawingStrategy.h  CircleGeometryType.h  IDrawingStrategy.h  IGeometryType.h  Line.h  LineDrawingStrategy.h  LineGeometryType.h  Rectangle.h  RectangleDrawingStrategy.h  RectangleGeometryType.h  Shape.h  Text.h  TextDrawingStrategy.h  TextGeometryType.h  Triangle.h  TriangleDrawingStrategy.h  TriangleGeometryType.h
part2/Tests/: MockCanvas.h  PictureTest.cpp  ShapeTest.cpp
